// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Card/Card Content Playground 1`] = `
<div
  className="MuiCardContent-root"
>
  Card content text
</div>
`;

exports[`Storyshots Components/Card/Card Content With Body 2 Typography 1`] = `
<div
  className="MuiCardContent-root"
>
  <p
    className="MuiTypography-root MuiTypography-body2"
  >
    Card content with body2 typography variant
  </p>
</div>
`;

exports[`Storyshots Components/Card/Card Content With Heading 6 And Body 2 1`] = `
<div
  className="MuiCardContent-root"
>
  <h6
    className="MuiTypography-root MuiTypography-h6"
  >
    Typography example for heading level 6 (h6)
  </h6>
  <p
    className="MuiTypography-root MuiTypography-body2"
  >
    Typography example for body2 variant
  </p>
</div>
`;

exports[`Storyshots Components/Card/Card Content With Multiple Typographies 1`] = `
<div
  className="MuiCardContent-root"
>
  <span
    className="MuiTypography-root MuiTypography-overline"
  >
    Overline text
  </span>
  <h6
    className="MuiTypography-root MuiTypography-h6"
  >
    Typography example for heading level 6 (h6)
  </h6>
  <p
    className="MuiTypography-root MuiTypography-caption MuiTypography-colorTextSecondary MuiTypography-paragraph"
  >
    Paragraph with caption variant and text secondary
  </p>
  <p
    className="MuiTypography-root MuiTypography-body2"
  >
    Typography example for body2 variant
  </p>
</div>
`;

exports[`Storyshots Components/Card/Card Content With Paragraph Typography 1`] = `
<div
  className="MuiCardContent-root"
>
  <p
    className="MuiTypography-root MuiTypography-body2 MuiTypography-paragraph"
  >
    Card content with body2 paragraph typography
  </p>
</div>
`;
